--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
   },
   "dependencies": {
     "bootstrap-vue": "^2.0.0-rc.15",
-    "vue": "^2.6.6"
+    "vue": "^2.6.6",
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.5.0",
     "@vue/cli-plugin-eslint": "^3.5.0",
-    "@vue/cli-service": "^3.5.0",
+    "@vue/cli-service": "^3.5.3",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
